Build for todd-coxeter post

--- a/src/pages/blog/todd-coxeter/index.mdx
+++ b/src/pages/blog/todd-coxeter/index.mdx
@@ -4,7 +4,7 @@ title: "A Graphical Explanation of the Todd-Coxeter Algorithm"
 tags: ["math", "algorithms"]
 excerpt: "Coming soon..."
 ---
-import { DemoGraph1 } from './components';
+import { DemoGraph1 } from '../../../components/blog/todd-coxeter';
 
 Using a group presentation is often the most compact and elegant way to define a group, and in some cases it is also the most natural [1]. However, it is in general quite difficult to analyze groups written in this form. In fact, it is impossible to create an algorithm that determines whether a group is finite, trivial, or abelian from its group presentation alone [1].
 
