--- a/src/blog/todd-coxeter/index.mdx
+++ b/src/blog/todd-coxeter/index.mdx
@@ -128,7 +128,7 @@ $$
 
 ## Implementation
 
-An implementation of this algorithm written in python can be found on GitHub [here](https://github.com/jsimonrichard/jsimonrichard/blob/main/src/pages/blog/todd-coxeter/todd-coxeter.py) or downloaded <a href="https://gitcdn.link/cdn/jsimonrichard/jsimonrichard/main/src/pages/blog/todd-coxeter/todd-coxeter.py" download="todd-coxeter.py">here</a>. Most of its core logic was taken from Kyle Miller's implementation<RefLink href="#resources">3</RefLink>, but it was rewritten using classes. This, in my opinion, makes it a lot easier to read. It was also written as a terminal application in order to increase its ease of use.
+An implementation of this algorithm written in python can be found on GitHub [here](https://github.com/jsimonrichard/jsimonrichard/blob/main/src/blog/todd-coxeter/todd-coxeter.py) or downloaded <a href="https://raw.githubusercontent.com/jsimonrichard/jsimonrichard/main/src/blog/todd-coxeter/todd-coxeter.py">here</a>. Most of its core logic was taken from Kyle Miller's implementation<RefLink href="#resources">3</RefLink>, but it was rewritten using classes. This, in my opinion, makes it a lot easier to read. It was also written as a terminal application in order to increase its ease of use.
 
 To use this program, download it and then run the following command to get more usage information.
 
