Updated post-quantum paper

--- a/src/blog/post-quantum-algorithms-overview/index.mdx
+++ b/src/blog/post-quantum-algorithms-overview/index.mdx
@@ -1,10 +1,10 @@
 ---
 date: "2022-12-06"
-title: "Next Steps Towards the Adoption of Post-Quantum Algorithms"
-tags: ["cybersecurity", "algorithms"]
+title: "Making the Transition to Post-Quantum Cryptography"
+tags: ["cybersecurity", "algorithms", "quantum"]
 excerpt: "A short overview of post-quantum algorithms and a discussion about the future of cybersecurity"
 attachments:
-  - "./Next Steps Towards the Adoption of Post-Quantum Algorithms.pdf"
+  - "./Making the Transition to Post-Quantum Cryptography.pdf"
 ---
 
-**Note:** This paper was originally submitted as the final paper for an undergraduate technical communications course.
+**Note:** This paper was first submitted as the final paper for an undergraduate technical communications course, then revised and published in [The Downtown Review Vol. 9 Iss. 2](https://engagedscholarship.csuohio.edu/tdr/vol9/iss2/).
