--- a/src/pages/blog/todd-coxeter/index.mdx
+++ b/src/pages/blog/todd-coxeter/index.mdx
@@ -4,8 +4,8 @@ title: "A Graphical Explanation of the Todd-Coxeter Algorithm"
 tags: ["math", "algorithms"]
 excerpt: "An explanation covering group presentations, group actions, Schreier graphs, the concepts behind the Todd-Coxeter Algorithm, and an implementation of that algorithm"
 ---
-import { SchreierGraphExample, ToddCoxeterExample } from '../../components/blog/todd-coxeter';
-import { RefLink } from '../../components/blog';
+import { SchreierGraphExample, ToddCoxeterExample } from '~/components/blog/todd-coxeter';
+import { RefLink } from '~/components/blog';
 
 Using a group presentation is often the most compact and elegant way to define a group, and in some cases it is also the most natural<RefLink href="#resources">1</RefLink>. However, it is in general quite difficult to analyze groups written in this form. In fact, it is impossible to create an algorithm that determines whether a group is finite, trivial, or abelian from its group presentation alone<RefLink href="#resources">1</RefLink>.
 
@@ -30,7 +30,7 @@ $$
 $$
 
 $$
-\alpha(g, \alpha(h, s)) = \alpha(gh, s) \hspace{0.5cm} \forall g,h \in G
+\alpha(g, \alpha(h, s)) = \alpha(gh, s) \hspace\{0.5cm} \forall g,h \in G
 $$
 
 If a group action of $G$ on $S$ exists, $G$ is said to act on $S$. If $G$ acts *transitively* on $S$, then the following is also true.
