Fix blog post metadata

--- a/src/content/blog/node-modules-debug-tool/index.mdx
+++ b/src/content/blog/node-modules-debug-tool/index.mdx
@@ -1,7 +1,7 @@
 ---
-date: '2025-06-05'
+date: '2025-08-02'
 title: 'A Tool for Debugging Node Modules Issues'
-tags: ['javascript', 'node', 'react']
+tags: ['javascript', 'node']
 excerpt: ''
 ---
 
